--- a/package.json
+++ b/package.json
@@ -3,18 +3,12 @@
   "version": "0.0.1",
   "description": "hmic",
   "license": "UNLICENSED",
-  "devDependencies": {
-    "eslint": "^4.18.2",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "pkg": "^4.3.0"
-  },
+
   "dependencies": {
     "async": "^2.6.0",
     "async-lock": "^1.1.2",
     "bluebird": "^3.5.1",
+    "dotenv": "^5.0.1",
     "log4js": "^2.5.3",
     "moment": "^2.21.0",
     "mqtt": "^2.16.0",
@@ -22,10 +16,18 @@
     "protobufjs": "^6.8.6",
     "ramda": "^0.25.0",
     "redis": "^2.8.0",
-    "sequelize": "^4.35.2",
+    "sequelize": "^4.36.1",
     "socket.io": "^2.0.4",
     "source-map-support": "^0.5.3",
     "uuid": "^3.2.1",
     "zeromq": "^4.6.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "pkg": "^4.3.0"
   }
 }
