--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.21.0",
     "mqtt": "^2.16.0",
     "mysql2": "^1.5.3",
+    "properties": "^1.2.1",
     "protobufjs": "^6.8.6",
     "ramda": "^0.25.0",
     "redis": "^2.8.0",
@@ -28,6 +29,6 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "pkg": "^4.3.0"
+    "pkg": "^4.3.1"
   }
 }
